2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing IndexBtMessageValidator.h
	* src/Makefile.am

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Indonesian, Russian, Italian, Ukrainian and Simplified
	Chinese translations. Thank you for contributing our project.
	* po/id.po
	* po/it.po
	* po/ru.po
	* po/uk.po
	* po/zh_CN.po
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated README
	* README

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.3.0
	* configure.ac

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* src/DefaultBtContext.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Slice/joinPath for name of single torrent.
	* src/DefaultBtContext.cc
	* test/DefaultBtContextTest.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page: Documented --dry-run and --index-out
	options. Changed the default value of --uri-selector and
	--http-auth-challenge options. Removed --direct-file-mapping
	option. Added example for --index-out
	* doc/aria2c.1.txt
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated TEXT_DRY_RUN
	* src/usage_text.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the default value of --uri-selector option from 'inorder'
	to 'feedback'
	* src/OptionHandlerFactory.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included current URI in exception message.
	* src/AbstractCommand.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed ServerStatURISelector as FeedbackURISelector.
	* src/FeedbackURISelector.cc
	* src/FeedbackURISelector.h
	* src/Makefile.am
	* src/RequestGroupMan.cc
	* src/ServerStatURISelector.cc
	* src/ServerStatURISelector.h
	* test/FeedbackURISelectorTest.cc
	* test/Makefile.am